--- a/AlgorytmySortowania/AlgorytmySortowania/AlgorytmySortowania.vcxproj
+++ b/AlgorytmySortowania/AlgorytmySortowania/AlgorytmySortowania.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{70E21B48-C1EB-4D62-9F2C-A1ADC8F69DC5}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>BubbleSort</RootNamespace>
+    <RootNamespace>AlgorytmySortowania</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -154,7 +154,7 @@
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="BubbleSort.cpp" />
+    <ClCompile Include="AlgorytmySortowania.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
